EP-1153: erstatter mockito mot mockk