@@ -2,7 +2,7 @@ buildscript {
 
     ext {
         kotlinVersion = '1.4.31'
-        springBootVersion = '2.3.2.RELEASE'
+        springBootVersion = '2.4.6'
         logstashLogbackVersion = '6.6'
     }
 
@@ -48,6 +48,7 @@ dependencies {
     implementation("no.nav.eessi.pensjon:ep-logging:1.0.6")
     implementation("no.nav.eessi.pensjon:ep-personoppslag:7.1.2")
     implementation("no.nav.eessi.pensjon:ep-security-sts:0.0.10")
+    implementation("no.nav.eessi.pensjon:ep-eux:1.0.40")
 
     // Spring-boot
     implementation("org.springframework.boot:spring-boot-starter-web:${springBootVersion}")
@@ -77,12 +78,14 @@ dependencies {
     //test
     testImplementation('org.springframework.boot:spring-boot-starter-test') {
         exclude module: 'junit'
+        exclude module: "mockito-core"
         exclude module: "junit-vintage-engine"
     }
-    testImplementation("io.mockk:mockk:1.10.6")
+    testImplementation("io.mockk:mockk:1.11.0")
+    testImplementation("com.ninja-squad:springmockk:3.0.1")
 
     testImplementation 'org.springframework.kafka:spring-kafka-test'
-    testImplementation("io.findify:s3mock_2.12:0.2.5")
+    testImplementation 'io.findify:s3mock_2.13:0.2.6'
     testImplementation("org.junit.jupiter:junit-jupiter:5.7.1")
     testImplementation("org.junit.jupiter:junit-jupiter-params:5.7.1")
     testImplementation("org.mock-server:mockserver-client-java:5.11.2")
@@ -92,11 +95,19 @@ dependencies {
     // Architecture tests
     testImplementation 'com.tngtech.archunit:archunit:0.14.1'
 
-    implementation("no.nav.eessi.pensjon:ep-eux:1.0.40")
 
 }
 test {
     useJUnitPlatform()
+
+    // set heap size for the test JVM(s)
+    minHeapSize = "128m"
+    maxHeapSize = "512m"
+
+    // set JVM arguments for the test JVM(s)
+    jvmArgs '-XX:MaxPermSize=256m'
+    failFast = true
+
 }
 
 tasks.withType(Test) {
